# ulog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_docs.sh  demo_buffer_stats_report.txt  detailed_design_21.1.md  rebuild.sh  run_benchmarks.sh  run_demo.sh  run_demos.sh  run_tests.sh
.github/workflows/: ci.yml  cmake-multi-platform.yml
benchmarks/: demo_buffer_benchmark_no_mutex.cpp  demo_buffer_benchmark_with_mutex.cpp  demo_observer_benchmark_no_mutex.cpp  demo_observer_benchmark_with_mutex.cpp
benchmarks/include/: ulog_benchmark.h
cmake/: ulogConfig.cmake.in
demos/: README.md  demo_auto_flushing.cpp  demo_buffer_assertions.cpp  demo_buffer_benchmark_no_mutex.cpp  demo_buffer_benchmark_with_mutex.cpp  demo_buffer_stats.cpp  demo_cerr_observer.cpp  demo_container_formatting.cpp  demo_custom_formatting.cpp  demo_debug_scope.cpp  demo_exception_formatting.cpp  demo_file_observer.cpp  demo_log_level_filtering.cpp  demo_main.cpp  demo_message_supplier.cpp  demo_observer_benchmark_no_mutex.cpp  demo_observer_benchmark_with_mutex.cpp  demo_slow_op_guard.cpp  demo_threaded_buffer_stats.cpp  demo_ustr_integration.cpp  demo_windows_utf8.cpp
demos/extensions/: README.md
demos/extensions/include/: buffer_assertions.h  buffer_stats.h  buffer_stats_reporter.h  debug_scope.h  multi_thread_reporter.h  slow_op_guard.h  thread_aware_logger.h  thread_buffer_analyzer.h  thread_id_observer.h
demos/include/: simple_console_observer.h  test_helpers.h  threaded_work_simulator.h
demos/ustr/: ustr.h
docs/: Doxyfile  design.md
include/ulog/: ulog.h
include/utest/: utest.h
tests/: test_buffer.cpp  test_formatter.cpp  test_logger.cpp  test_observer.cpp
